teil commit schweizer system rundeliste einiges an code aus der supermelee herausgezogen zum wieder verwenden